--- a/Helvetica/stylesheet.css
+++ b/Helvetica/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Helvetica';
-    src: url('Helvetica.woff') format('woff');
+    src: url('https://https://cdn.muehlhaeusler.online/Helvetica/Helvetica.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
